kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-cicd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auto-cicd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auto-cicd
    spec:
      containers:
        - name: auto-cicd
          image: ${CONTAINER_IMAGE_TAGGED}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: auto-cicd-config
              mountPath: /app/config.yml
              subPath: config.yml
            - name: auto-cicd-config
              mountPath: /app/templates/common/.gitlab-ci.yml
              subPath: .gitlab-ci.yml
            - name: auto-cicd-config
              mountPath: /app/templates/common/kubernetes_manifest.yml
              subPath: kubernetes_manifest.yml
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "500Mi"
              cpu: "300m"

      volumes:
        - name: auto-cicd-config
          configMap:
            name: auto-cicd

      imagePullSecrets:
        - name: ecr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: auto-cicd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auto-cicd
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-cicd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Self-Service Suite
    gethomepage.dev/name: Auto-CICD
    gethomepage.dev/description: Allows users to deploy their applications easily
    gethomepage.dev/icon: https://gitlab.jtektrnd.net/uploads/-/system/project/avatar/2866/auto-cicd.png
spec:
  rules:
    - host: auto-cicd.ssc.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auto-cicd
                port:
                  number: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auto-cicd
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - auto-cicd.ssc.jtektrnd.net
  rules:
    - backendRefs:
        - name: auto-cicd
          port: 80
